[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/combate/FundoCombate2.png" type="Texture" id=1]
[ext_resource path="res://cenas/ferramentas/btnVermelho.tscn" type="PackedScene" id=2]
[ext_resource path="res://cenas/elementos/Personagem.tscn" type="PackedScene" id=3]
[ext_resource path="res://cenas/elementos/zenys.tscn" type="PackedScene" id=4]
[ext_resource path="res://cenas/elementos/Oponente.tscn" type="PackedScene" id=5]
[ext_resource path="res://cenas/Telas/AreaCartas.tscn" type="PackedScene" id=6]
[ext_resource path="res://cenas/ferramentas/btn.tscn" type="PackedScene" id=7]
[ext_resource path="res://cenas/elementos/listaExibicaoCartas.tscn" type="PackedScene" id=8]
[ext_resource path="res://script/combate/controladorDeTurnos/controladorCampo.gd" type="Script" id=9]
[ext_resource path="res://cenas/ferramentas/ControladorCartas.tscn" type="PackedScene" id=10]
[ext_resource path="res://cenas/ferramentas/CaixaAlerta.tscn" type="PackedScene" id=11]

[sub_resource type="GDScript" id=1]
script/source = "extends Node2D

var areaJogador1
var jogador1
var areaJogador2
var jogador2

# Called when the node enters the scene tree for the first time.
func _ready():
	areaJogador1=[$Jogador1Ataque,$Jogador1Defesa]
	areaJogador2=[$Jogador2Ataque,$Jogador2Defesa]
	
	var filhos = $Jogador1Ataque.get_children()+$Jogador2Ataque.get_children()
	for item in filhos:
		item.add_to_group(Constante.GRUPO_AREA_CARTA_ATAQUE)
	
	filhos = $Jogador1Defesa.get_children()+$Jogador2Defesa.get_children()
	for item in filhos:
		item.add_to_group(Constante.GRUPO_AREA_CARTA_DEFESA)

func retornaDono(area):
	var retorno = areaJogador1.find(area)
	if(retorno>-1):
		return jogador1
	retorno = areaJogador2.find(area)
	if(retorno>-1):
		return jogador2
		
"

[node name="controladorCampo" type="Node2D"]
script = ExtResource( 9 )

[node name="Fundo" type="Sprite" parent="."]
z_index = -2
texture = ExtResource( 1 )

[node name="Container" type="Node2D" parent="."]
position = Vector2( 0, -30 )
scale = Vector2( 0.8, 0.9 )
z_index = -1
script = SubResource( 1 )

[node name="Jogador1Ataque" parent="Container" instance=ExtResource( 6 )]
position = Vector2( 0, 88 )
scale = Vector2( 1, 0.65 )

[node name="Jogador1Defesa" parent="Container" instance=ExtResource( 6 )]
position = Vector2( 0, 275 )
scale = Vector2( 1, 0.8 )

[node name="Jogador2Ataque" parent="Container" instance=ExtResource( 6 )]
position = Vector2( 0, -88 )
scale = Vector2( 1, 0.65 )

[node name="Jogador2Defesa" parent="Container" instance=ExtResource( 6 )]
position = Vector2( 0, -275 )
scale = Vector2( 1, 0.8 )

[node name="btnAzul" parent="." instance=ExtResource( 7 )]
position = Vector2( 870, -25 )

[node name="btnVermelho" parent="." instance=ExtResource( 2 )]
position = Vector2( 920, 75 )

[node name="Personagem" parent="." instance=ExtResource( 3 )]
position = Vector2( -800, 420 )
scale = Vector2( 1.2, 1.2 )

[node name="Oponente" parent="." instance=ExtResource( 5 )]
position = Vector2( 800, -455 )
scale = Vector2( 1.2, 1.2 )

[node name="zenys" parent="." instance=ExtResource( 4 )]
position = Vector2( 785, 10 )

[node name="zenysOponente" parent="." instance=ExtResource( 4 )]
position = Vector2( 785, -70 )

[node name="listaExibicaoCartas" parent="." instance=ExtResource( 8 )]

[node name="ControladorCartas" parent="." instance=ExtResource( 10 )]

[node name="CaixaAlerta" parent="." instance=ExtResource( 11 )]
visible = false
position = Vector2( -732, 350 )
